starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__binary_add_traces.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test() {\n    let left = 1;\n    let right = 2;\n    let total = left + right;\n}\n"
---
T-Fn: test => ()
  T-Let: {test: fn() -> () [test]} ⊢ let left = 1; ⇒ i64
    T-Int: {test: fn() -> () [test]} ⊢ 1 ⇒ i64
  T-Let: {left: i64, test: fn() -> () [test]} ⊢ let right = 2; ⇒ i64
    T-Int: {left: i64, test: fn() -> () [test]} ⊢ 2 ⇒ i64
  T-Let: {left: i64, right: i64, test: fn() -> () [test]} ⊢ let total = left + right; ⇒ i64
    T-Bin-Add: {left: i64, right: i64, test: fn() -> () [test]} ⊢ left + right ⇒ i64
      T-Var: {left: i64, right: i64, test: fn() -> () [test]} ⊢ left ⇒ i64
      T-Var: {left: i64, right: i64, test: fn() -> () [test]} ⊢ right ⇒ i64
      Unify-Var: i64 ~ i64 => {i64/t3}
