starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__call_arity_mismatch_too_few_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn add(a: i64, b: i64) -> i64 {\n    a + b\n}\n\nfn test() {\n    add(1);\n}\n"
---
E0030 (https://starstream.nightstream.dev/errors/E0030)

  x function expects 2 arguments but 1 was provided
   ,-[test.star:6:5]
 5 | fn test() {
 6 |     add(1);
   :     ^^^^^^
 7 | }
   `----
