starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__call_arity_mismatch_too_many_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn add(a: i64, b: i64) -> i64 {\n    a + b\n}\n\nfn test() {\n    add(1, 2, 3);\n}\n"
---
E0031 (https://starstream.nightstream.dev/errors/E0031)

  x function expects 2 arguments but 3 were provided
   ,-[test.star:6:5]
 5 | fn test() {
 6 |     add(1, 2, 3);
   :     ^^^^^^^^^^^^
 7 | }
   `----
