starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__call_expression_chained.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn double(n: i64) -> i64 {\n    n + n\n}\n\nfn test() {\n    let value = double(double(5));\n}\n"
---
T-Fn: double => i64
  T-ReturnTail: n + n => i64
    T-Bin-Add: {double: fn(n: i64) -> i64, n: i64} ⊢ n + n ⇒ i64
      T-Var: {double: fn(n: i64) -> i64, n: i64} ⊢ n ⇒ i64
      T-Var: {double: fn(n: i64) -> i64, n: i64} ⊢ n ⇒ i64
      Unify-Const: i64 ~ i64 => {}
    Unify-Const: i64 ~ i64 => {}

T-Fn: test => ()
  T-Let: {double: fn(n: i64) -> i64, test: fn() -> ()} ⊢ let value = double(double(5)); ⇒ i64
    T-Call: {double: fn(n: i64) -> i64, test: fn() -> ()} ⊢ double(double(5)) ⇒ i64
      T-Var: {double: fn(n: i64) -> i64, test: fn() -> ()} ⊢ double ⇒ fn(n: i64) -> i64
      T-Call: {double: fn(n: i64) -> i64, test: fn() -> ()} ⊢ double(5) ⇒ i64
        T-Var: {double: fn(n: i64) -> i64, test: fn() -> ()} ⊢ double ⇒ fn(n: i64) -> i64
        T-Int: {double: fn(n: i64) -> i64, test: fn() -> ()} ⊢ 5 ⇒ i64
        Unify-Var: i64 ~ i64 => {i64/t3}
      Unify-Const: i64 ~ i64 => {}
