starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__call_expression_no_args.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn greet() -> i64 {\n    42\n}\n\nfn test() {\n    let value = greet();\n}\n"
---
T-Fn: greet => i64
  T-ReturnTail: 42 => i64
    T-Int: {greet: fn() -> i64 [greet]} ⊢ 42 ⇒ i64
    Unify-Var: i64 ~ i64 => {i64/t3}

T-Fn: test => ()
  T-Let: {greet: fn() -> i64 [greet], test: fn() -> () [test]} ⊢ let value = greet(); ⇒ i64
    T-Call: {greet: fn() -> i64 [greet], test: fn() -> () [test]} ⊢ greet() ⇒ i64
      T-Var: {greet: fn() -> i64 [greet], test: fn() -> () [test]} ⊢ greet ⇒ fn() -> i64 [greet]
