starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__call_expression_traces.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn add(a: i64, b: i64) -> i64 {\n    a + b\n}\n\nfn test() {\n    let result = add(1, 2);\n}\n"
---
T-Fn: add => i64
  T-ReturnTail: a + b => i64
    T-Bin-Add: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64} ⊢ a + b ⇒ i64
      T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64} ⊢ a ⇒ i64
      T-Var: {a: i64, add: fn(a: i64, b: i64) -> i64, b: i64} ⊢ b ⇒ i64
      Unify-Const: i64 ~ i64 => {}
    Unify-Const: i64 ~ i64 => {}

T-Fn: test => ()
  T-Let: {add: fn(a: i64, b: i64) -> i64, test: fn() -> ()} ⊢ let result = add(1, 2); ⇒ i64
    T-Call: {add: fn(a: i64, b: i64) -> i64, test: fn() -> ()} ⊢ add(1, 2) ⇒ i64
      T-Var: {add: fn(a: i64, b: i64) -> i64, test: fn() -> ()} ⊢ add ⇒ fn(a: i64, b: i64) -> i64
      T-Int: {add: fn(a: i64, b: i64) -> i64, test: fn() -> ()} ⊢ 1 ⇒ i64
      Unify-Var: i64 ~ i64 => {i64/t3}
      T-Int: {add: fn(a: i64, b: i64) -> i64, test: fn() -> ()} ⊢ 2 ⇒ i64
      Unify-Var: i64 ~ i64 => {i64/t4}
